theme(fix): more contrast in primary color

--- a/assets/scss/01-settings/_colormode-dark.scss
+++ b/assets/scss/01-settings/_colormode-dark.scss
@@ -7,5 +7,5 @@
   color-scheme: dark;
 
   --bs-body-bg: var(--theme-color-organic-noir);
-  --bs-primary: var(--theme-color-deep-saffron);
+  --bs-primary: #dc322f;
 }
